Log in
Skip to main content
Skip to sidebar
Dashboards
Projects
Issues
Help
Keyboard Shortcuts
About Jira
Jira Credits
Log In
Watched Subcomponents
JDK
JDK-8165226
Bad -Xloggc: arguments crashes the VM
Log In
Closed
Export
null
XML
Word
Printable
Details
Type:
Bug
Resolution:
Fixed
Priority:
P2
Fix Version/s:
9
Affects Version/s:
9
Component/s:
hotspot
Labels:
logging
Subcomponent:
runtime
Resolved In Build:
b137
Verification:
Not verified
Description
If the given filename is invalid or if UL fails to open the file, the VM crashes because it attempts to report the error back on the error stream, which is NULL.
For example: -Xloggc:#2
Attachments
Activity
People
Assignee:
Marcus Larsson (Inactive)
Reporter:
Marcus Larsson (Inactive)
Votes
:
0
Vote for this issue
Watchers:
2
Start watching this issue
Dates
Created:
2016-09-01 03:43
Updated:
2017-07-19 09:17
Resolved:
2016-09-07 07:19