8165226: Bad -Xloggc: arguments crashes the VM

Reviewed-by: dsamersoff, sjohanss